--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.ljvoyage.toolkit",
+  "name": "com.ljvoyage.ljvtoolkit",
   "version": "1.0.0",
   "displayName": "LJVoyage Toolkit",
   "description": "A collection of Unity utility functions and extensions.",
