--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*" # 当推送以 v 开头的 tag（如 v1.0.0）时触发
 
+permissions:
+  contents: write
+
 jobs:
   build-and-release:
     name: Auto Sync Version & Release
