--- a/Editor/LJVoyage.LJVToolkit.Editor.asmdef
+++ b/Editor/LJVoyage.LJVToolkit.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:0286d4cd81cb0c245a7c127e333f132c"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
